# deep_tech_doc_scope

./: .dockerignore  .flake8  .gitignore  README.md  gunicorn.conf.py  pyproject.toml
config/: celery.py  settings.py  urls.py
docker/: Dockerfile  docker-compose.yml
documents/: conf.py  confs.py  llm.py  models.py  tasks.py  urls.py  utils.py
documents/api/: serializers.py  urls.py  views.py
documents/migrations/: 0001_initial.py  0002_alter_page_classification_material.py
